# etymos-gtk

./: Makefile.am  README.md  error.c  error.h  etymo_signals.c  etymo_window.c  etymo_window.h  main.c  makefile  mysql_change.c  mysql_change.h  mysql_prepared.c  mysql_selects.c  mysql_selects.h  plan.txt  root_window.c  root_window.h  t.c  word_options.c  word_selects.c  word_selects.h  word_signals.c  word_window.c  word_window.h
import/: importDict.c  libImportDict.c  libImportDict.h  makefile
import/data/: greek_authors.txt  greek_dialogue_word_join.txt  greek_dialogues.txt  greek_roots.txt  greek_synonyms.txt  greek_verb_class.txt  index_terms.txt  palatinoall.txt
import/data/greek_authors/: aeschines.txt  aeschylus.txt  andocides.txt  antiphon.txt  apollonius_rhodius.txt  aristophanes.txt  aristotle.txt  bacchylides.txt  callimachus.txt  demades.txt  demosthenes.txt  dinarchus.txt  diodorus.txt  euclid.txt  euripides.txt  flavius_josephus.txt  herodotus.txt  hesiod.txt  homer.txt  homeric_hymns.txt  hyperides.txt  isaeus.txt  isocrates.txt  lycurgus.txt  lysias.txt  new_testament.txt  old_oligarch.txt  pausanias.txt  pindar.txt  plutarch.txt  pseudo_apollonius.txt  sophocles.txt  strabo.txt  theocritus.txt  theophrastus.txt  thucydides.txt  xenophon.txt
import/data/latin_authors/: boethius.txt  caesar_civil_war.txt  caesar_gallic_wars.txt  catullus.txt  cicero.txt  cornelius_tacitus_opera_minora.txt  horace.txt  latin_vulgate.txt  livy.txt  ovid.txt  (+12 more)
index/: generic_index_window.c  generic_index_window.h  main.c  makefile  mysql_index.c  mysql_index.h
