bin_PROGRAMS = etymos
etymos_SOURCES = error.c \
                 etymo_signals.c \
                 etymo_window.c \
                 main.c \
                 mysql_change.c \
                 mysql_selects.c \
                 root_window.c \
                 word_options.c \
                 word_selects.c \
                 word_signals.c \
                 word_window.c
